@@ -1,3 +1,10 @@
+2004-05-06  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/auth.c: Don't use non-eCos <paths.h>
+	* src/pppd.c: Don't use non-eCos <sys/wait.h> and <sys/resource.h>
+	* src/sys-ecos.c: netmask must be extern - not all tools have
+	COMMON section support.
+
 2004-04-15  Oyvind Harboe <oyvind.harboe@zylin.com>
 
 	* src/chat.c: Script now returns success when it runs to completion
